# Management-Of-Foreign-Language-Courses

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  languages.cpp  languages.h  main.cpp  student.cpp  student.h
src/: group_manager.cpp  group_manager.h  httplib.h  intensity.cpp  intensity.h  json_utils.h  languages.cpp  languages.h  main.cpp  names.h  randoms.cpp  randoms.h  simulation.cpp  simulation.h  step.h  student.cpp  student.h
www/: index.html  script.js  style.css
